done, room for improvement

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "env",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.py",
   "scripts": {
     "start": "py app.py"
   },
